--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/go,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,visualstudiocode
 
+dist/
+
 ### Go ###
 # Binaries for programs and plugins
 *.exe
