--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
-          version: latest
+          version: 0.174.2
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
